2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	* Layer.cs: add Id property

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	* Drawing, Drawing/IMapDrawer.cs, Drawing/GdiPlus, Cumberland.csproj:
	  add new interface
	* Point.cs: clean up

2008-10-16  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-16  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-16  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-16  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-16  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-16  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-14  Scott Ellington <scott.ellington@gmail.com> 

	* MapRenderer.cs: short term set up for generating glList
	* Matrix.cs: copy over from Salmon Viewer for matrix transformations

2008-10-10  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-10  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-09  Scott Ellington <scott.ellington@gmail.com> 

	* MapRenderer.cs: fix some bugs

2008-10-09  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-09  Scott Ellington <scott.ellington@gmail.com> 

	* MapRenderer.cs: switch from GL_LINES to GL_LINE_STRIP
	* ProjFourWrapper.cs: add ctor

2008-10-08  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-08  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-08  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-08  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-08  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-06  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-06  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-03  Scott Ellington <scott.ellington@gmail.com> 

	

2008-09-30  Scott Ellington <scott.ellington@gmail.com> 

	

2008-09-19  Scott Ellington <scott.ellington@gmail.com> 

	

2008-09-19  Scott Ellington <scott.ellington@gmail.com> 

	

2008-09-18  Scott Ellington <scott.ellington@gmail.com> 

	
